Wed May 23 18:36:35 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * MPC/config/ciao_deployment_stub.mpb:
        
          Added "requires += threads" to disable single threaded build.
        
        * DAnCE/NodeManager/Node_Manager.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.h
        
          Removed ACE_HAS_THREADS guards.

Wed May 23 02:21:30 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.h:
        
          Added back #if defined (ACE_HAS_THREADS) macro to 
          fix error in single_threaded build.

Mon May 21 15:46:23 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/Task_StartLaunch.h:

          Included ACE configuration header file to fix the warnigns
          on the VxWorks5.5.1_x86_GCC2.96_Exceptions build.

Sat May 19 15:59:08 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
        * DAnCE/Deployment/NodeApp_CB_Impl.h:
        
          Moved #include "ace/config-all.h" from .h file to 
          the .cpp file since otherwise the #if defined (ACE_HAS_THREADS)
          cannot be evaluated properly.

Fri May 18 13:46:13 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:

          Added #if defined (ACE_HAS_THREADS) to prevent build error
          of single_threaded build.

Thu May 17 19:53:02 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/Task_StartLaunch.cpp:
        * DAnCE/DomainApplicationManager/Task_StartLaunch.h:

          Added this new class which serves as an active object when
          performing startLaunch.

        * DAnCE/DomainApplicationManager/DomainApplicationManager_ActiveObject_Impl.cpp:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_ActiveObject_Impl.h:
        