@@ -15,8 +15,6 @@
 #include /**/ "ace/pre.h"
 #include "ace/config-all.h"
 
-#if defined (ACE_HAS_THREADS)
-
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
@@ -86,6 +84,3 @@ namespace CIAO
 
 #include /**/ "ace/post.h"
 #endif /* NODEAPPLICATION_CALLBACK_IMPL_H */
-
-#endif /* ACE_HAS_THREADS */
-
