@@ -20,7 +20,6 @@
 #include /**/ "ace/pre.h"
 
 #include "ace/config-all.h"
-#if defined (ACE_HAS_THREADS)
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
@@ -379,5 +378,3 @@ namespace CIAO
 
 #include /**/ "ace/post.h"
 #endif /* CIAO_NODEAPPLICATIONMANAGER_IMPL_H */
-
-#endif /* ACE_HAS_THREADS */
