@@ -1,3 +1,12 @@
+Wed May 23 20:01:49 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
+        * DAnCE/Deployment/NodeApp_CB_Impl.h:
+        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
+        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
+        
+          Removed ACE_HAS_THREADS guards.
+
 Wed May 23 18:36:35 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * MPC/config/ciao_deployment_stub.mpb:
